kubernetes/2/deploy/celery-beat.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: celery-beat
    labels:
      app: celery-beat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: celery-beat
  template:
    metadata:
      labels:
        app: celery-beat
    spec:
      containers:
          - name: celery-beat
            image: localhost:32000/sample-app:latest
            command: ["celery", "-A", "_base", "beat", "-l", "Info"]
