kubernetes/2/deploy/celery-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: celery-worker
    labels:
      app: celery-worker
spec:
  replicas: 2
  selector:
    matchLabels:
      app: celery-worker
  template:
    metadata:
      labels:
        app: celery-worker
    spec:
      containers:
          - name: celery-worker
            image: localhost:32000/sample-app:latest
            command: ["celery", "-A", "_base", "worker", "-l", "Info"]
