kubernetes/2/deploy/database.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database-deployment
  labels:
    app: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      name: database
      labels:
        app: database
    spec:
      containers:
        - name: database
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: database-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: database-storage
          persistentVolumeClaim:
            claimName: database-pvc
---

apiVersion: v1
kind: Service
metadata:
  name: database-service
  labels:
    app: database
spec:
  selector:
    app: database
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
