kubernetes/2/deploy/django-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-deployment
  labels:
    app: django-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django-app
  template:
    metadata:
      name: django-deployment
      labels:
        app: django-app
    spec:
      containers:
        - name: app
          image: localhost:32000/sample-app:latest
          ports:
            - containerPort: 8000
---

apiVersion: v1
kind: Service
metadata:
  name: django-service
spec:
  selector:
    app: django-app
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
